login dengan password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_history">History</string>
     <string name="title_pay">Pay</string>
     <string name="title_me">Account</string>
+    <string name="_62">+62-</string>
 </resources>
