membuat auth rest api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_pay">Pay</string>
     <string name="title_me">Account</string>
     <string name="_62">+62-</string>
+    <string name="bayar">BAYAR</string>
 </resources>
